test-suite/bugs/closed/bug_11935.v
Section S.
  Variable A : Prop.

  Fail Check A@{Type}.
  Check A@{}.
End S.
